k8s-security-framework/policies/image-security/KSP-IMG-004/KSP-IMG-004-verify-signed-images.yaml
apiVersion: policies.kyverno.io/v1
kind: ImageValidatingPolicy
metadata:
  name: verify-signed-images
  labels:
    app.kubernetes.io/managed-by: kyverno
    policies.ksp.io/id: ksp-img-004
  annotations:
    policies.kyverno.io/title: Verify Signed Images
    policies.kyverno.io/category: KSP Image Security
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: Verifies Cosign signatures for images in the project Harbor registry.
    policies.ksp.io/parameter: Trusted Cosign public key configured for the project Harbor registry.
    policies.ksp.io/profiles: restricted
    policies.ksp.io/dev-mode: Audit
    policies.ksp.io/staging-mode: Audit
    policies.ksp.io/prod-mode: Enforce
    policies.ksp.io/exception: controlled

spec:
  failurePolicy: Fail

  webhookConfiguration:
    timeoutSeconds: 30

  evaluation:
    background:
      enabled: false

  validationActions:
  - Audit
  - Warn

  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods

  credentials:
    providers:
    - default
    secrets:
    - harbor-registry-credentials

  matchImageReferences:
  - glob: "harbor-public:30003/ksp-test/*"

  attestors:
  - name: cosign
    cosign:
      ctlog:
        url: https://rekor.sigstore.dev
        insecureIgnoreTlog: true
      key:
        data: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAENCILe4A6XfYS7ywb6+2dYofOp/EF
[...]
          -----END PUBLIC KEY-----

  validations:
  - expression: >
      (
        images.containers
        + images.?initContainers.orValue([])
        + images.?ephemeralContainers.orValue([])
      ).map(
        image,
        verifyImageSignatures(image, [attestors.cosign])
      ).all(result, result > 0)
    message: Image must be signed with the trusted Cosign key.
