k8s-security-framework/policies/image-security/KSP-IMG-004/tests/exception-policy-for-specific-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: verify-signed-images-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: verify-signed-images
    kind: ImageValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name in ['ksp-img-004-exception', 'ksp-img-004-exception-secondary']
      && object.metadata.namespace == 'policy-test'
