k8s-security-framework/policies/image-security/KSP-IMG-004/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-img-004-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
