k8s-security-framework/policies/image-security/KSP-IMG-004/tests/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: verify-signed-images-exception
  namespace: policy-test
spec:
  policyRefs:
  - name: verify-signed-images
    kind: ValidatingPolicy
  matchConditions:
  - name: match-exempt-resource
    expression: object.metadata.name == 'ksp-img-004-exception' && object.metadata.namespace
      == 'policy-test'
