k8s-security-framework/policies/image-security/KSP-IMG-004/tests/negative-ephemeral-container-unsigned-harbor-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: img-004-negative-ephemeral-unsigned
  namespace: policy-test
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:3.10
  ephemeralContainers:
    - name: debugger
      image: harbor-public:30003/ksp-test/unsigned-clean@sha256:b7f3d86d6e84fc17718c48bcde1450807faa2d56704205c697b4bd5df7b9e29f
      command: ["sh"]
