k8s-security-framework/policies/image-security/KSP-IMG-004/tests/negative-wrong-key-signed-harbor-image.yaml
apiVersion: v1
kind: Pod
metadata:
  name: img-004-negative-wrong-key-signed
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor-public:30003/ksp-test/wrong-signed@sha256:b7f3d86d6e84fc17718c48bcde1450807faa2d56704205c697b4bd5df7b9e29f
