k8s-security-framework/policies/image-security/KSP-IMG-004/tests/positive-multiple-out-of-scope-images.yaml
apiVersion: v1
kind: Pod
metadata:
  name: img-004-positive-out-of-scope-images
  namespace: policy-test
spec:
  containers:
    - name: pause
      image: registry.k8s.io/pause:3.10
    - name: kyverno
      image: reg.kyverno.io/kyverno/kyverno:1.18.2
